--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li class="active"><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Resume</a></li>
         <li><a href="services-offered.html">Services Offered</a></li>
