--- a/reviews.html
+++ b/reviews.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="reviews.css">
+  <link rel="stylesheet" type="text/css" href="main.css">
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
     .navbar {
@@ -45,21 +45,27 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#">Resume</a></li>
         <li><a href="services-offered.html">Services Offered</a></li>
         <li class="active"><a href="reviews.html">Reviews</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
+       <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="reviews.html"> EN </a></li>
+        <li><a href="#"> DE </a></li>
+        <li><a href="#"> FR </a></li>
+      </ul>
       </div>
   </div>
 </nav>
   
-<div class="container-fluid text-center">    
-  <div class="row content">
+<div class="left-h1">
 <h1>
   Reviews from My Past Tour Group Members
 </h1>
+</div>
+<div class="reviews-text">
 <p>
   <i>Rachel was my tour guide at Hohenschönhausen, the former Stasi prison, in May 2017. A young American historian, native of California, she was quick to point up her East European and Jewish ancestry, and several years residency in Berlin. All of which gave her a uniquely distanced, yet very grounded and very knowledgeable perspective on the history of Hohenschönhausen. She took every opportunity to engage with the group and answered all our questions with enthusiasm and intelligence. However, what I most appreciated about Rachel was her levity throughout. Hohenschönhausen is somewhere that has been witness to the most unspeakable crimes. But the manner in which Rachel conducted the tour ensured that it was never too emotionally wrought, and not at all the gruelling 2 hours it could have been. In sum total, Rachel's a great tour guide. And a warm, passionate, smart individual.</i><br> <b> — Matthew Robinson, London </b>
 </p>
@@ -72,7 +78,5 @@
 <p>
   <i>Unsere Gruppe war sehr begeistert von Rachels Führung an der Gedenkstätte Berliner Mauer. Sie hat sehr anschaulich und lebhaft erzählt und informiert. Man konnte ihr gut Folgen und wurde zum Nachdenken angeregt.</i><br> <b> — Ulrike Krone, Deutsch-Amerikanisches Institut, Tübingen </b>
   </p>
-</div>
-  </div>
 </div>
 </body>
