media query services offered image

--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
   </div>
 </div>
 <div id="san-diego-skyline">
-  <img src="http://127.0.01/RED/Desktop/SanDiego_panorama.jpg">
+  <img src="/assets/SanDiego_panorama.jpg">
 </div>
 </body>
