--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#">Resume</a></li>
+        <li><a href="resume.html">Resume</a></li>
         <li><a href="services-offered.html">Services Offered</a></li>
         <li><a href="reviews.html">Reviews</a></li>
         <li><a href="contact.html">Contact</a></li>
