--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="container-fluid text-center">    
   <div class="row content">
     <div class="headings">
-      <h1>Rachel Dickstein</h1>
+      <h1>Rachel Dickstein!</h1>
       <h2>
         Historical-Political Educator <br> // <br> Content Writer <br> // <br> Political Analyst and Lecturer
       </h2>
